# potify

./: CMakeLists.txt  README.md  controls.cpp  controls.h  main.cpp  player.cpp  player.h  playlist.cpp  playlist.h
test-playlist/: Michael Bublé - Feeling Good [Official Music Video] [Edwsf-8F3sI].webm
